# kosmos

./: Cargo.toml  GPU_OPTIMIZATION_GUIDE.md
assets/shaders/: animated_material.wgsl
examples/: geometric_transform.rs  interactive_shapes.rs
framework/: Cargo.toml
framework/src/: lib.rs
framework/src/animations/: animation_system.rs  builder.rs  easing.rs  mod.rs  timeline.rs
framework/src/geometrics/: extensions.rs  mod.rs  shapes.rs
framework/src/interactions/: README.md  components.rs  drag.rs  events.rs  input_utils.rs  mod.rs  select.rs  transform.rs
runtime/: Cargo.toml
src/: main.rs  main_gpu.rs
src/animations/: keyframe.rs  mod.rs
src/gpu_animations/: mod.rs
