[package]
name = "kosmos_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
rand = { workspace = true }

[[example]]
name = "geometric_transform"
path = "../examples/geometric_transform.rs"

[[example]]
name = "interactive_shapes"
path = "../examples/interactive_shapes.rs"
